# onvif-server-cpp

./: CMakeLists.txt  README.md  cgi_soap.cpp  cgi_soap.h  isp_ctrl.c  onvif-analytics-cgi.cpp  onvif-analytics-cgi.py  onvif-bootstrap.conf  onvif-fixup-conf.service  onvif-fixup-conf.sh  onvif-imaging-cgi.cpp  onvif-imaging-cgi.py  onvif-recording-cgi.cpp  onvif-recording-cgi.py  onvif-replay-server.cpp  onvif-replay-server.py  onvif-replay.default  onvif-replay.service  onvif-rtsp-server.cpp  onvif-rtsp-watchdog.cpp  onvif-rtsp-watchdog.service  onvif-rtsp-watchdog.timer  onvif-rtsp.default  onvif-rtsp.service  onvif-server_1.0.bb.new  onvif-wsd-start.sh  onvif.service  onvif_cgi_wrapper.sh  onvif_simple_server.conf
device_service_files_overrides/: GetCapabilities_no_ptz.xml  GetCapabilities_ptz.xml  GetServices_no_ptz_media2.xml  GetServices_no_ptz_no_media2.xml  GetServices_ptz_media2.xml  GetServices_ptz_no_media2.xml  GetServices_with_capabilities_no_ptz_media2.xml  GetServices_with_capabilities_no_ptz_no_media2.xml  GetServices_with_capabilities_ptz_media2.xml  GetServices_with_capabilities_ptz_no_media2.xml
media_service_files_overrides/: GetVideoEncoderConfiguration.xml  GetVideoEncoderConfigurations_both.xml
yocto/: onvif-server-cpp_1.0.0.bb
